@@ -1,1 +1,6 @@
 # spring-cloud-alibaba
+
+jvm优化参数
+---
+-XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m -Xms1024m -Xmx1024m -Xmn256m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC
+---
